--- a/index.html
+++ b/index.html
@@ -261,11 +261,8 @@
                         </h2>
                     </div>
                     <div class="decs">
-                        <p>Visva Bharati University, West Bengal <br>
-                            Degree: Bachelor's <br>
-                            Major: Computer Science. <br>
-                            Year: 2022-25
-                        </p>
+                        <p>Visva Bharati University, West Bengal
+                       </p>
                     </div>
                 </div>
             </div>
@@ -277,10 +274,7 @@
                         </h2>
                     </div>
                     <div class="decs">
-                        <p>DAV Public School, Tensa
-                            Odisha, India <br> Year: 2021-22 <br>
-                            Passing Percentage: 94.6% <br>
-                            Stream: Science
+                        <p>Goenka Vidyayatana, Bankura
                         </p>
                     </div>
                 </div>
