--- a/index.html
+++ b/index.html
@@ -232,10 +232,7 @@
                         </h2>
                     </div>
                     <div class="decs">
-                        <p>Visva Bharati University, West Bengal <br>
-                            Degree: Bachelor's <br>
-                            Major: Computer Science. <br>
-                            Year: 2022-25
+                        <p>Masters in CS
                         </p>
                     </div>
                 </div>
@@ -300,10 +297,7 @@
                         </h2>
                     </div>
                     <div class="decs">
-                        <p>DAV Public School, Tensa
-                            Odisha, India <br> Year: 2021-22 <br>
-                            Passing Percentage: 94.6% <br>
-                            Stream: Science
+                        <p>hello
                         </p>
                     </div>
                 </div>
@@ -316,10 +310,7 @@
                         </h2>
                     </div>
                     <div class="decs">
-                        <p>Visva Bharati University, West Bengal <br>
-                            Degree: Bachelor's <br>
-                            Major: Computer Science. <br>
-                            Year: 2022-25
+                        <p>hello
                         </p>
                     </div>
                 </div>
