--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
                 <div class="content">
                     <div class="tag">
                         <h2>
-                            School Life ( ~ 2014)
+                            School Life ( ~ 2012 ~ 2014)
                         </h2>
                     </div>
                     <div class="decs">
